--- a/index.html
+++ b/index.html
@@ -529,7 +529,7 @@
 
   <section class="optionsPanel">
     <button id="openDisplayModal" type="button" class="optionsTitleBtn" title="表示する項目を選ぶ">
-      <strong>表示する項目（3つまで）</strong>
+      <strong>表示名</strong>
       <span class="right">
         <span class="picked" id="pickedSummary">未選択</span>
         <span aria-hidden="true">▾</span>
@@ -556,7 +556,6 @@
     <div class="modalHeader">
       <div>
         <p class="title" id="displayModalTitle">表示する項目（3つまで）</p>
-        <p class="hint" id="displayModalHint">チェックは最大3つまで</p>
       </div>
       <button type="button" id="closeDisplayModal" class="arrowBtn" aria-label="閉じる">✕</button>
     </div>
